# GKP-Codes-and-CM-Abelian-Varieties

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  references.bib
passive-cliffords/: README.md  pyproject.toml
passive-cliffords/data/: README.md  consolidated_headline_results.csv  consolidated_results.json  phase10_blind_search_protocol.json  phase10_blind_search_summary.csv  phase10_blind_search_summary.json  phase10_high_precision_audit.json  phase10_posthoc_cm_comparison.csv  phase10_posthoc_cm_comparison.json  phase5_cm_population_summary.json  phase6_generic_controls_summary.json  phase6_high_precision_audit.json  phase6_preregistered_protocol.json  phase7_equal_distance_controls_summary.json  phase7_high_precision_audit.json  phase7_preregistered_protocol.json  phase8_adversarial_protocol.json  phase8_adversarial_search_summary.csv  phase8_adversarial_search_summary.json  phase8_high_precision_audit.json  phase9_gate_robustness_protocol.json  phase9_gate_robustness_summary.csv  phase9_gate_robustness_summary.json  phase9_high_precision_audit.json  strongest_known_cm_records.json
passive-cliffords/docs/: consolidated_results.md  phase10_blind_global_search.md  phase5_population_survey.md  phase6_preregistered_controls.md  phase7_equal_distance_controls.md  phase8_adversarial_search.md  phase9_gate_robustness.md
passive-cliffords/notebooks/: 01_phase1_automorphism_action_engine.ipynb  02_phase2_d4_klein_benchmarks.ipynb  03_phase3_nonuniform_cm_actions.ipynb  04_phase4_matched_noncm_controls.ipynb  05_phase5_cm_population_survey.ipynb  06_phase6_preregistered_generic_controls.ipynb  07_phase7_equal_distance_controls.ipynb  08_phase8_adversarial_local_search.ipynb  09_phase9_gate_robustness.ipynb  10_phase10_blind_global_search.ipynb  README.md
passive-cliffords/scripts/: audit_phase10_precision.py  audit_phase7_precision.py  audit_phase8_precision.py  audit_phase9_precision.py  check_phase1.py  check_phase10.py  check_phase2.py  check_phase3.py  check_phase4.py  check_phase5.py  check_phase6.py  check_phase7.py  check_phase8.py  check_phase9.py  check_release.py  generate_consolidated_results.py  generate_phase10_global_search.py  generate_phase5_population.py  generate_phase6_controls.py  generate_phase7_controls.py  generate_phase8_adversarial_search.py  generate_phase9_gate_robustness.py
passive-cliffords/src/gkp_passive_cliffords/: __init__.py  adversarial_search.py  automorphisms.py  benchmarks.py  cm_records.py  exact.py  finite_symplectic.py  gate_robustness.py  global_moduli_search.py  hermitian_automorphisms.py  higher_benchmarks.py  (+7 more)
passive-cliffords/tests/: conftest.py  test_automorphisms.py  test_higher_benchmarks.py  test_kernel_action.py  test_phase10_global_moduli_search.py  test_phase3_cm_records.py  test_phase4_matched_controls.py  test_phase5_population.py  test_phase6_preregistered_controls.py  test_phase7_normalized_controls.py  test_phase8_adversarial_search.py  test_phase9_gate_robustness.py
(+78 files in other folders)
