[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gkp-systole"
version = "0.2.0"
description = "Relative systoles and passive Clifford symmetries of GKP codes from CM abelian varieties"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hamza Ahmed"}]
keywords = ["GKP codes", "abelian varieties", "complex multiplication", "lattices", "quantum error correction"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["mpmath>=1.3", "numpy>=1.24"]

[project.optional-dependencies]
notebooks = ["jupyterlab>=4", "ipykernel>=6"]
dev = ["coverage>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
