[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gkp-passive-cliffords"
version = "0.1.0"
description = "Polarized automorphism actions and passive Clifford groups for GKP codes"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
